--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "^10.1.2",
     "tailwindcss": "^4"
   }
 }
