--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^3.0.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "lodash.debounce": "^4.0.8",
     "mongoose": "^8.13.2",
     "nanoid": "^5.1.5",
     "next": "15.3.0",
