--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "bcryptjs": "^3.0.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "lodash.debounce": "^4.0.8",
     "mongoose": "^8.13.2",
     "nanoid": "^5.1.5",
     "next": "15.3.0",
@@ -21,7 +20,8 @@
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
